Print item git iformation.
New help GitHelper will execute some remote command to get
information about the post.

NOTE: this method will cause a potential security issue

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -8,19 +8,12 @@
   <body>
     <div id="main">
       <%= yield %>
-      <% if @item[:tags] or @item[:author] %>
+
       <p>
-        <% if @item[:tags] %>
-          tags: <%= tags %>
-        <% end %>
-        <% if @item[:author] %>
-          <% if @item[:tags] %>
-            <br />
-          <% end %>
-          <em>-- last updated by <strong><%= @item[:author] %></strong></em>
-        <% end %>
+        ----
+        <br />
+        <em>last updated by <%= git(:author, @item) %> @ <%= git(:date, @item) %></em>
       </p>
-      <% end %>
     </div>
     <div id="sidebar">
       <h2>ArchLinuxVn</h2>
